# PhoLib

./: .gitignore  CMakeLists.txt  Readme.md  Readme.txt  build.sh  buildnrun.sh  buildtest.sh  cmake_install.cmake  install.sh  install_manifest.txt  installnrun.sh
phoLib/: CMakeLists.txt  cmake_install.cmake
phoLib/include/: phoLib.h
phoLib/src/: application.h
pholib/: CMakeLists.txt  PhoLibConfig.cmake  cmake_install.cmake  libPhoLib.so.1.0.1  libpho.so.1.0.1
pholib/include/PhoLib/: core.h  log.h  pholib.h  pholibpch.h
pholib/include/PhoLib/core/: application.h  log.h
pholib/include/PhoLib/events/: application_event.h  event.h  key_event.h  mouse_event.h
pholib/include/pholib/core/: application.h  core.h  log.h  window.h
pholib/include/pholib/events/: application_event.h  event.h  mouse_event.h
pholib/src/: application.cpp  log.cpp  pholib.h
pholib/src/common/: application.cpp  application.h  core.h
pholib/src/core/: application.cpp  log.cpp
sandbox/: CMakeLists.txt  cmake_install.cmake
sandbox/src/: main.cpp  sandbox_app.cpp
